--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,20 @@
 
-spring.datasource.url=jdbc:mysql://student.crjjnji07f8z.us-east-1.rds.amazonaws.com:3306/student
+spring.datasource.url=jdbc:mysql://localhost:3306/student
 spring.datasource.username=root
-spring.datasource.password=Mysql123
+spring.datasource.password=Abcd@1234
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+# H2 database - embedded database - in memory
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2
+
+#spring.security.user.name=admin
+#spring.security.user.password=admin
+#spring.security.user.roles=ADMIN
